--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -7,7 +7,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
-  background-image: url(http://untroubled.org/backgrounds/space/stars.gif);
+  background-image: url(Imagens/stars-fundo.webp);
   background-size: auto;
 
 }
