--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -8,7 +8,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   background-image: url(Imagens/stars-fundo.webp);
-  background-size: auto;
+  background-size: cover;
 
 }
 
