--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -7,8 +7,8 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
-  background-image: url(Imagens/stars-fundo.webp);
-  background-size: cover;
+  background-image: url(Imagens/FundoEstrelas.gif);
+  background-size: auto;
 
 }
 
@@ -22,7 +22,7 @@ body {
   position: absolute;
   top: 0;
   background-color: #000000;
-  background-image: url(http://untroubled.org/backgrounds/space/stars.gif);
+  background-image: url(Imagens/FundoEstrelas.gif);
   animation: animation 8s;
   max-width: 100%;
 }
@@ -113,14 +113,15 @@ img {
 .cabeçalho {
   width: 100%;
   height: 80px;
-  background-color: var(--cor-principal);
-  border: 5px solid rgb(0, 0, 0);
+  background-color: white;
+  display: flex;
   z-index: 2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   letter-spacing: 1px;
-  color: #FFFFFF;
+  color: var(--cor-principal);
   position: sticky 0;
+  align-items: center;
 }
 
 
@@ -187,14 +188,10 @@ p.margemC {
 
 .rodape {
   height: 150px;
-  background-color: var(--cor-principal);
+  background-color: white;
   clear: both;
   bottom: 0%;
-  border-top: 5px solid #000000;
   width: 100%;
-  border-right: 5px solid #000000;
-  border-bottom: 5px solid #000000;
-  border-right: 5px solid #000000;
 }
 
 .btn {
@@ -249,7 +246,7 @@ strong {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   letter-spacing: 1px;
-  color: #FFFFFF;
+  color: var(--cor-principal);
   text-shadow: 0 0 4px white;
 }
 
@@ -267,7 +264,20 @@ strong.cabeca {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 50px;
   letter-spacing: 1px;
-  color: #FFFFFF;
+  color: var(--cor-principal);
+  text-shadow: 0 0 4px white;
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 50px;
+  width: 100%;
+}
+
+strong.cabeca-white {
+  z-index: 2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  letter-spacing: 1px;
+  color: white;
   text-shadow: 0 0 4px white;
   text-decoration: none;
   margin-left: 10px;
@@ -405,13 +415,24 @@ strong.cabeca12 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   letter-spacing: 1px;
-  color: #FFFFFF;
+  color: var(--cor-principal);
   text-shadow: 0 0 2px white;
   text-decoration: none;
   width: 100%;
   line-height: 1.5;
 }
 
+strong.cabeca12-white {
+  z-index: 2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  letter-spacing: 1px;
+  color: white;
+  text-shadow: 0 0 2px white;
+  text-decoration: none;
+  width: 100%;
+  line-height: 1.5;
+}
 
 
 #glow {
@@ -738,7 +759,8 @@ img.FelixCatus {
 }
 
 .openNav {
-  float: left;
+
+  width: 100%;
   margin-top: -30px;
 }
 
@@ -773,6 +795,7 @@ img.FelixCatus {
 }
 
 h1.center {
+  width: 150%;
   text-align: center;
 }
 
@@ -802,8 +825,14 @@ h1.center {
 }
 
 #main {
-  margin-right: 10px;
-  margin-top: -13px;
+  float: right;
+}
+
+.buscas{
+  width: 100%;
+  display: flex;
+  
+  justify-content: right;
 }
 
 .MenuB {
