--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -100,7 +100,7 @@ img {
 
 }
 
-#center {
+.center {
   text-align: center;
   margin: auto;
 }
@@ -230,7 +230,7 @@ p.margemC {
   background-clip: content-box, border-box;
 }
 
-#container-stars {
+.container-stars {
   position: fixed;
   z-index: -1;
   width: 100%;
@@ -436,7 +436,7 @@ strong.cabeca12-white {
 }
 
 
-#glow {
+.glow {
   position: absolute;
   display: flex;
   width: 12rem;
@@ -494,14 +494,14 @@ strong.cabeca12-white {
   animation: none;
 }
 
-#stars {
+.stars {
   position: relative;
   background: transparent;
   width: 200rem;
   height: 200rem;
 }
 
-#stars::after {
+.stars::after {
   content: "";
   position: absolute;
   top: -10rem;
@@ -511,12 +511,12 @@ strong.cabeca12-white {
   animation: animStarRotate 90s linear infinite;
 }
 
-#stars::after {
+.stars::after {
   background-image: radial-gradient(#ffffff 1px, transparent 1%);
   background-size: 50px 50px;
 }
 
-#stars::before {
+.stars::before {
   content: "";
   position: absolute;
   top: 0;
@@ -526,7 +526,7 @@ strong.cabeca12-white {
   animation: animStar 60s linear infinite;
 }
 
-#stars::before {
+.stars::before {
   background-image: radial-gradient(#ffffff 1px, transparent 1%);
   background-size: 50px 50px;
   opacity: 0.5;
