--- a/eletricidade.css
+++ b/eletricidade.css
@@ -6,3 +6,10 @@
 .margemEntreTextos{
     margin-top: 15px;
 }
+h4{
+    color: #008383;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  letter-spacing: 1px;
+  
+}
