--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -363,12 +363,14 @@ p.caixas {
 
 img.veio {
   display: flex;
-  width: 25%;
-  height: 10%;
+  justify-content: center;
+  align-items: center;
   border: none;
-  margin-left: 0.5cm;
+  width: 30%;
+  margin: auto;
   filter: invert(100%);
   padding-right: 0.4%;
+
 }
 
 
